--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,12 @@ body, a:link, a:visited, a:active{
   background-color: #777;
 }
 .dancer{
-  border:10px solid red;
+  border:10px solid rgb(23,34,65);
   border-radius:10px;
+  position:absolute;
+}
+
+.dryingMan {
+
   position:absolute;
 }
