--- a/styles.css
+++ b/styles.css
@@ -48,6 +48,34 @@ body, a:link, a:visited, a:active{
   position:absolute;
 }
 
+.rotate {
+
+/* Safari */
+-webkit-transform: rotate(45deg);
+
+/* Firefox */
+-moz-transform: rotate(45deg);
+
+/* IE */
+-ms-transform: rotate(45deg);
+
+/* Opera */
+-o-transform: rotate(45deg);
+
+/* Internet Explorer */
+filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
+
+}
+
+.stopwatch {
+  font-size: 100px;
+  color: black;
+}
+
+.answer {
+  position:absolute;
+}
+
 body {
 
   background: url("beach.png") no-repeat ;
